# final-project-logncorwright

./: .env  .gitattributes  Cincinnati_Fire_Incidents.csv  README.md  census_education.csv  census_health.csv  census_income.csv  pyproject.toml  source.ipynb  source.py
